<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/menu">
    <item android:title="@string/get_ideas"
          android:icon="@drawable/baseline_wb_incandescent_white_24dp"
          android:id="@+id/list"/>
    <item android:title="@string/my_recipes"
          android:icon="@drawable/ic_launcher_foreground"
          android:id="@+id/myRecipes"/>
    <item android:title="@string/use_leftovers"
          android:icon="@drawable/ic_launcher_foreground"
          android:id="@+id/leftovers"/>
    <item android:title="@string/account"
          android:icon="@drawable/ic_launcher_foreground"
          android:id="@+id/account"/>
    <item android:title="@string/recipe"
          android:visible="false"
          android:icon="@drawable/ic_launcher_foreground"
          android:id="@+id/recipe"/>
</menu>