<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragments.AddRecipeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:fontFamily="@font/source_sans_pro_semi_bold"
                android:textSize="18sp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:text="@string/recipe_info"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true"
        >
            <EditText
                    android:id="@+id/inputRecipeName"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recept_naam"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutRecipeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true"
        >

            <EditText
                    android:id="@+id/inputRecipeDescription"
                    android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recept_beschrijving"
                    android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutRecipeServings"
                android:minWidth="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                app:errorEnabled="true">
            <EditText
                    android:id="@+id/inputRecipeServings"
                    android:minWidth="15dp"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="@string/recept_aantalpersonen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:fontFamily="@font/source_sans_pro_semi_bold"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="17dp"
                android:text="@string/preparation_time"
        />

        <TimePicker
                android:headerBackground="@color/colorPrimary"
                android:id="@+id/preparationTime"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:timePickerMode="spinner"
                android:numbersSelectorColor="@color/colorPrimary"/>

        <TextView
                android:id="@+id/errorPreparationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preparationTime_error"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginStart="17dp"
                android:visibility="gone"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnImageUpload"
                    android:text="@string/upload"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
            />

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutRecipeImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:errorEnabled="true">

                <EditText
                        android:id="@+id/inputRecipeImage"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/url_afbeelding"
                        android:imeOptions="actionNone"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <ImageView
                android:id="@+id/recipeImageUpload"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:clickable="false"
                android:focusable="false"
                android:visibility="gone"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:fontFamily="@font/source_sans_pro_semi_bold"
                android:textSize="18sp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:text="@string/ingredients"/>
        <Button
                android:id="@+id/addIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_ingredient"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"/>
        <TextView
                android:id="@+id/errorIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_ingredients_error"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginStart="17dp"
                android:visibility="gone"/>
        <ExpandableListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ingredientList"
                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
                android:divider="@android:color/darker_gray"
                android:scrollbars="none"
                android:dividerHeight="0.5dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:fontFamily="@font/source_sans_pro_semi_bold"
                android:textSize="18sp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:text="@string/preparationmethod"/>
        <Button
                android:id="@+id/addPreparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_preparationmethod"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"/>

        <TextView
                android:id="@+id/errorPreparationMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_preparationmethod_error"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginStart="17dp"
                android:visibility="gone"/>

        <ExpandableListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/preparationList"
                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
                android:divider="@android:color/darker_gray"
                android:scrollbars="none"
                android:dividerHeight="0.5dp"/>

        <Button
                android:id="@+id/addRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/source_sans_pro_bold"
                android:textSize="18sp"
                android:text="@string/add_recipe"
                android:layout_margin="3dp"
                android:textColor="@android:color/white"
                android:clickable="true"
                android:focusable="true"/>
    </LinearLayout>
</ScrollView>