<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".fragments.AddIngredientDialogFragment">
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="350dp">
        <android.support.constraint.ConstraintLayout
                android:id="@+id/ingredientDialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/lblAddIngredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_ingredient"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutIngredientQuantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintTop_toBottomOf="@id/lblAddIngredient"
                    app:layout_constraintEnd_toStartOf="@id/layoutIngredientMeasurement"
                    app:layout_constraintStart_toStartOf="parent">
                <EditText
                        android:id="@+id/inputIngredientQuantity"
                        android:minWidth="15dp"
                        android:inputType="number"
                        android:maxLength="4"
                        android:hint="@string/ingredient_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutIngredientMeasurement"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintTop_toBottomOf="@id/lblAddIngredient"
                    app:layout_constraintStart_toEndOf="@id/layoutIngredientQuantity"
                    app:layout_constraintEnd_toEndOf="parent"
            >
                <EditText
                        android:id="@+id/inputIngredientMeasurement"
                        android:minWidth="15dp"
                        android:inputType="text"
                        android:hint="@string/ingredient_measurement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutIngredientName"
                    android:minWidth="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintTop_toBottomOf="@id/layoutIngredientMeasurement"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            >
                <EditText
                        android:id="@+id/inputIngredientName"
                        android:minWidth="15dp"
                        android:inputType="text"
                        android:hint="@string/ingredient_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutIngredientNotes"
                    android:minWidth="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintTop_toBottomOf="@id/layoutIngredientName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            >
                <EditText
                        android:id="@+id/inputIngredientNotes"
                        android:minWidth="15dp"
                        android:inputType="text"
                        android:hint="@string/ingredient_notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutIngredientCategory"
                    android:minWidth="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintTop_toBottomOf="@id/layoutIngredientNotes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            >
                <EditText
                        android:id="@+id/inputIngredientCategory"
                        android:minWidth="15dp"
                        android:inputType="text"
                        android:hint="@string/ingredient_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:padding="5dp"
                    android:layout_marginStart="20dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintTop_toBottomOf="@id/layoutIngredientCategory"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnAddIngredient"
            />
            <Button
                    android:id="@+id/btnAddIngredient"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_ingredient"

                    android:padding="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintTop_toBottomOf="@id/layoutIngredientCategory"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnCancel"
            />
            <!--
                    android:layout_margin="3dp"
                    android:textColor="@android:color/white"
                    android:clickable="true"
                    android:focusable="true"
            -->
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</LinearLayout>