<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".fragments.AddPreparationDialogFragment">
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="250dp">
            <TextView
                    android:id="@+id/lblAddPreparationMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_preparation_method"
                    android:gravity="center"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
            />
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutPreparationMethod"
                    android:minWidth="35dp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
            >
                <EditText
                        android:id="@+id/inputPreparationMethod"
                        android:minWidth="15dp"
                        android:inputType="text|textMultiLine"
                        android:maxHeight="130dp"
                        android:scrollbars="vertical"
                        android:hint="@string/preparation_method_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
            <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:padding="5dp"

                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:clickable="true"
                    android:focusable="true"
            />
            <Button
                    android:id="@+id/btnAddPreparationMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_preparation_method"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="5dp"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:clickable="true"
                    android:focusable="true"
            />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>